Add precondition on className